fix: Add space at the bottom of sidebars to prevent overlapping action buttons with footer

--- a/views/scss/item-creator.scss
+++ b/views/scss/item-creator.scss
@@ -257,6 +257,7 @@ img.dragging.ui-draggable-dragging {
 .item-editor-sidebar-wrapper {
     background: $canvas;
     position: relative;
+    padding-bottom: 35px;
 
     @include simple-flex-box(195px);
     overflow-y: auto;
